--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
     <properties>
         <spring-version>5.2.2.RELEASE</spring-version>
         <hibernate-version>5.4.10.Final</hibernate-version>
+        <junit-version>4.13</junit-version>
+        <javax.servlet-api-version>4.0.1</javax.servlet-api-version>
+        <jstl-version>1.2</jstl-version>
+        <mysql-connector-java-version>8.0.19</mysql-connector-java-version>
+        <h2-version>1.4.200</h2-version>
     </properties>
 
     <dependencies>
@@ -34,22 +39,28 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <version>${javax.servlet-api-version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <version>${jstl-version}</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.19</version>
+            <version>${mysql-connector-java-version}</version>
         </dependency>
 
         <dependency>
@@ -57,5 +68,20 @@
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate-version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2-version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
