--- a/src/main/resources/properties/db.properties
+++ b/src/main/resources/properties/db.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/flowershop?serverTimezone=Europe/Minsk&useSSL=false
+jdbc.url=jdbc:mysql://localhost:3306/flowershop?serverTimezone=Europe/Minsk
 jdbc.username=root
 jdbc.password=root
 
