--- a/src/main/resources/properties/log4j.properties
+++ b/src/main/resources/properties/log4j.properties
@@ -17,3 +17,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 log4j.logger.org.hibernate=ERROR
 log4j.logger.org.springframework=ERROR
 log4j.logger.org.dozer=ERROR
+log4j.logger.org.apache.commons.beanutils.converters=ERROR
